force-app/main/default/objects/Survey__c/fields/Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>Additional_Comments__c</fullName>
    <description>Created by: JA
Purpose: Capture if an individual has anything else they would like to share with our team.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Do they have anything else they would like to share with our team?</inlineHelpText>
    <label>Additional Comments</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>