force-app/main/default/objects/Survey__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <description>Created By: AF
Business Unit: Executive Reporting
Purpose: Displays a street address
Populated: Auto via survey / manual</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Address</label>
    <length>50</length>
    <type>Text</type>
</CustomField>