force-app/main/default/objects/Survey__c/fields/Age__c.field-meta.xml
<CustomField>
    <fullName>Age__c</fullName>
    <description>GS
Purpose: For WFT Survey.</description>
    <label>Age</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Age_Brackets</valueSetName>
    </valueSet>
</CustomField>