force-app/main/default/objects/Survey__c/fields/Annual_Household_Income__c.field-meta.xml
<CustomField>
    <fullName>Annual_Household_Income__c</fullName>
    <description>Created By: AF
Business Unit: Executive Reporting
Purpose: Displays survey data
Populated: Auto via survey / manual</description>
    <label>Annual Household Income</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Income_Brackets</valueSetName>
    </valueSet>
</CustomField>