force-app/main/default/objects/Survey__c/fields/Annual_Individual_Income_Before_Bitwise__c.field-meta.xml
<CustomField>
    <fullName>Annual_Individual_Income_Before_Bitwise__c</fullName>
    <description>GS
Purpose: Baseline Survey</description>
    <inlineHelpText>What were your total yearly individual earnings before taxes before you took a Bitwise (Geekwise) course?</inlineHelpText>
    <label>Annual Individual Income Before Bitwise</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Income_Brackets</valueSetName>
    </valueSet>
</CustomField>