force-app/main/default/objects/Survey__c/fields/Annual_Individual_Income_Before_Tax_Now__c.field-meta.xml
<CustomField>
    <fullName>Annual_Individual_Income_Before_Tax_Now__c</fullName>
    <description>GS
Purpose: Baseline Survey</description>
    <inlineHelpText>What are your total yearly individual earnings before taxes now?</inlineHelpText>
    <label>Annual Individual Income Before Tax Now</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Income_Brackets</valueSetName>
    </valueSet>
</CustomField>