force-app/main/default/objects/Survey__c/fields/Any_Other_Major_Barriers__c.field-meta.xml
<CustomField>
    <fullName>Any_Other_Major_Barriers__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Please tell us about any other major barrier(s) you face that is not listed above.</inlineHelpText>
    <label>Any Other Major Barriers</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>