force-app/main/default/objects/Survey__c/fields/Applicable_Groups__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Groups__c</fullName>
    <description>Created by: JA
Purpose: Capture if an individual belongs to any of the groups to better design classes and support services</description>
    <inlineHelpText>Do they belong to any of these groups?</inlineHelpText>
    <label>Applicable Groups</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Groups</valueSetName>
    </valueSet>
</CustomField>