force-app/main/default/objects/Survey__c/fields/Application_Developer_Pathway__c.field-meta.xml
<CustomField>
    <fullName>Application_Developer_Pathway__c</fullName>
    <label>Application Developer Pathway</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Apprentice_Tech_Stack</valueSetName>
    </valueSet>
</CustomField>