force-app/main/default/objects/Survey__c/fields/Apprentice_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Apprentice_Start_Date__c</fullName>
    <description>TL
Purpose: For the apprentice survey.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>When did you begin your apprenticeship?</inlineHelpText>
    <label>Apprentice Start Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>