force-app/main/default/objects/Survey__c/fields/Apprenticeship_Interest_Reason__c.field-meta.xml
<CustomField>
    <fullName>Apprenticeship_Interest_Reason__c</fullName>
    <description>Created by: JA
Purpose: Capture the reason an individual is interested in joining the apprenticeship program.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Why are they interested in becoming an apprentice?</inlineHelpText>
    <label>Apprenticeship Interest Reason</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>