force-app/main/default/objects/Survey__c/fields/Apprenticeship_Pursue_Reason__c.field-meta.xml
<CustomField>
    <fullName>Apprenticeship_Pursue_Reason__c</fullName>
    <description>Created by: VC
Purpose: Track Apprenticeship pursue reason from survey</description>
    <inlineHelpText>What was your top reason for choosing to pursue a Bitwise/Geekwise apprenticeship?</inlineHelpText>
    <label>Apprenticeship Pursue Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Convenience</fullName>
            </value>
            <value>
                <fullName>Support available to students/apprentices</fullName>
            </value>
            <value>
                <fullName>People and atmosphere</fullName>
            </value>
            <value>
                <fullName>Opportunities available to students/apprentices</fullName>
            </value>
            <value>
                <fullName>Apprentice pay</fullName>
            </value>
            <value>
                <fullName>Beautiful buildings</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>