force-app/main/default/objects/Survey__c/fields/Biggest_Apprenticeship_Barrier__c.field-meta.xml
<CustomField>
    <fullName>Biggest_Apprenticeship_Barrier__c</fullName>
    <description>TL
Purpose: For the apprentice survey.</description>
    <inlineHelpText>What is the biggest barrier you face, if any, in completing your Bitwise apprenticeship?</inlineHelpText>
    <label>Biggest Apprenticeship Barrier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Barrier_Values</valueSetName>
    </valueSet>
</CustomField>