force-app/main/default/objects/Survey__c/fields/Biggest_Class_Completion_Barrier__c.field-meta.xml
<CustomField>
    <fullName>Biggest_Class_Completion_Barrier__c</fullName>
    <inlineHelpText>What is the biggest barrier you face, if any, in completing your Bitwise class?</inlineHelpText>
    <label>Biggest Class Completion Barrier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lack of childcare</fullName>
            </value>
            <value>
                <fullName>Lack of funds to pay for training courses</fullName>
            </value>
            <value>
                <fullName>Lack of transportation</fullName>
            </value>
            <value>
                <fullName>Lack of access to a high-speed internet connection</fullName>
            </value>
            <value>
                <fullName>Lack of funds for a computer</fullName>
            </value>
            <value>
                <fullName>I do not face any of these barriers</fullName>
            </value>
            <value>
                <fullName>Lack of time due to work obligations</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>