force-app/main/default/objects/Survey__c/fields/Biggest_Registration_Barrier__c.field-meta.xml
<CustomField>
    <fullName>Biggest_Registration_Barrier__c</fullName>
    <inlineHelpText>What is the biggest barrier you faced in registering for first Bitwise class?</inlineHelpText>
    <label>Biggest Registration Barrier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lack of childcare</fullName>
            </value>
            <value>
                <fullName>Lack of funds to pay for training courses</fullName>
            </value>
            <value>
                <fullName>Lack of access to a high-speed internet connection</fullName>
            </value>
            <value>
                <fullName>Lack of funds for a computer</fullName>
            </value>
            <value>
                <fullName>I do not face any of these barriers</fullName>
            </value>
            <value>
                <fullName>Lack of time due to work obligations</fullName>
            </value>
            <value>
                <fullName>Lack of time due to family obligations</fullName>
            </value>
            <value>
                <fullName>Lack of interest in the apprenticeship pathway you are taking</fullName>
            </value>
            <value>
                <fullName>Lack of transportation</fullName>
                <isActive>false</isActive>
                <label>Lack of transportation</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>