force-app/main/default/objects/Survey__c/fields/Bitwise_Courses_Completed__c.field-meta.xml
<CustomField>
    <fullName>Bitwise_Courses_Completed__c</fullName>
    <description>GS
Purpose: Baseline Survey</description>
    <inlineHelpText>Which Bitwise courses have you completed? check all that apply</inlineHelpText>
    <label>Bitwise Courses Completed</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Websites for Beginners (HTML/CSS)</fullName>
            </value>
            <value>
                <fullName>Mobile Friendly Sites (responsive design)</fullName>
            </value>
            <value>
                <fullName>JavaScript for Beginners</fullName>
            </value>
            <value>
                <fullName>Intro to Angular2</fullName>
            </value>
            <value>
                <fullName>React.js</fullName>
            </value>
            <value>
                <fullName>Node</fullName>
            </value>
            <value>
                <fullName>MongoDB</fullName>
            </value>
            <value>
                <fullName>Express</fullName>
            </value>
            <value>
                <fullName>Python</fullName>
            </value>
            <value>
                <fullName>Django</fullName>
            </value>
            <value>
                <fullName>Ruby</fullName>
            </value>
            <value>
                <fullName>Rails</fullName>
            </value>
            <value>
                <fullName>Closure</fullName>
            </value>
            <value>
                <fullName>MySQL</fullName>
            </value>
            <value>
                <fullName>.Net</fullName>
            </value>
            <value>
                <fullName>Swift</fullName>
            </value>
            <value>
                <fullName>WordPress</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Online marketing</fullName>
            </value>
            <value>
                <fullName>Alexa skills</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>