force-app/main/default/objects/Survey__c/fields/Bitwise_Geekwise_Buildings_Inspire_Me__c.field-meta.xml
<CustomField>
    <fullName>Bitwise_Geekwise_Buildings_Inspire_Me__c</fullName>
    <description>Created By: RS
Purpose: Field for Baseline Student Survey</description>
    <label>Bitwise/Geekwise Buildings Inspire Me</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Agreement_Rating</valueSetName>
    </valueSet>
</CustomField>