force-app/main/default/objects/Survey__c/fields/Bitwise_Geekwise_Cared_For_My_Wellbeing__c.field-meta.xml
<CustomField>
    <fullName>Bitwise_Geekwise_Cared_For_My_Wellbeing__c</fullName>
    <description>Created By: RS
Purpose: Field for Baseline Student Survey</description>
    <label>Bitwise/Geekwise Cared For My Wellbeing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Agreement_Rating</valueSetName>
    </valueSet>
</CustomField>