force-app/main/default/objects/Survey__c/fields/Bitwise_Geekwise_Courses_Completed__c.field-meta.xml
<CustomField>
    <fullName>Bitwise_Geekwise_Courses_Completed__c</fullName>
    <description>Created By: RS
Purpose: Field for Baseline Student Survey</description>
    <inlineHelpText>The number of Bitwise (Geekwise) courses the student completed.</inlineHelpText>
    <label>Bitwise (Geekwise) Courses Completed?</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>