force-app/main/default/objects/Survey__c/fields/Bitwise_Geekwise_Is_Supportive__c.field-meta.xml
<CustomField>
    <fullName>Bitwise_Geekwise_Is_Supportive__c</fullName>
    <description>Created By: RS
Purpose: Field for Baseline Student Survey</description>
    <inlineHelpText>The student found a nurturing and supportive environment at Bitwise/Geekwise.</inlineHelpText>
    <label>Bitwise/Geekwise Is Supportive</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Agreement_Rating</valueSetName>
    </valueSet>
</CustomField>