force-app/main/default/objects/Survey__c/fields/Bitwise_Geekwise_Made_Me_Feel_Included__c.field-meta.xml
<CustomField>
    <fullName>Bitwise_Geekwise_Made_Me_Feel_Included__c</fullName>
    <description>Created By: RS
Purpose: Field for Baseline Student Survey</description>
    <inlineHelpText>Bitwise/Geekwise made the student feel like they belong.</inlineHelpText>
    <label>Bitwise/Geekwise Made Me Feel Included</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Agreement_Rating</valueSetName>
    </valueSet>
</CustomField>