force-app/main/default/objects/Survey__c/fields/Bitwise_Geekwise_Prepared_Me_For_My_Job__c.field-meta.xml
<CustomField>
    <fullName>Bitwise_Geekwise_Prepared_Me_For_My_Job__c</fullName>
    <description>Created By: RS
Purpose: Field for Baseline Student Survey</description>
    <inlineHelpText>The student feel like Bitwise/Geekwise prepared me for my current career.</inlineHelpText>
    <label>Bitwise/Geekwise Prepared Me For My Job</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Agreement_Rating</valueSetName>
    </valueSet>
</CustomField>