force-app/main/default/objects/Survey__c/fields/Bitwise_Geekwise_Provided__c.field-meta.xml
<CustomField>
    <fullName>Bitwise_Geekwise_Provided__c</fullName>
    <description>Created By: RS
Purpose: Field for Baseline Student Survey</description>
    <inlineHelpText>Bitwise/Geekwise helped the student access the following services.</inlineHelpText>
    <label>Bitwise/Geekwise Provided These Services</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bitwise/Geekwise shuttle/bus service</fullName>
            </value>
            <value>
                <fullName>Transportation or access to city bus tokens</fullName>
            </value>
            <value>
                <fullName>Childcare options</fullName>
            </value>
            <value>
                <fullName>Connection to wraparound service organizations related to veterans&apos; services</fullName>
            </value>
            <value>
                <fullName>Formerly incarcerated services</fullName>
            </value>
            <value>
                <fullName>Finding resources that provided me a safer environment</fullName>
            </value>
            <value>
                <fullName>Legal services</fullName>
            </value>
            <value>
                <fullName>Connection to organizations that assist with housing</fullName>
            </value>
            <value>
                <fullName>Free or low-cost broadband services</fullName>
            </value>
            <value>
                <fullName>Connection to food banks</fullName>
            </value>
            <value>
                <fullName>Connection to self-help organizations</fullName>
            </value>
            <value>
                <fullName>Assistance paying utility bills</fullName>
            </value>
            <value>
                <fullName>Access to a computer</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>