force-app/main/default/objects/Survey__c/fields/BW_Apprentice_Pathway__c.field-meta.xml
<CustomField>
    <fullName>BW_Apprentice_Pathway__c</fullName>
    <description>TL
Purpose: For apprentice survey.</description>
    <inlineHelpText>Which Bitwise Industries apprenticeship pathway are you on?</inlineHelpText>
    <label>BW Apprentice Pathway</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Apprentice_Pathway</valueSetName>
    </valueSet>
</CustomField>