force-app/main/default/objects/Survey__c/fields/Child_Caregiver__c.field-meta.xml
<CustomField>
    <fullName>Child_Caregiver__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created by: JA
Purpose: Capture if an individual is a primary caregiver of a child of 17 years or younger</description>
    <inlineHelpText>Are they the primary caregiver of at least 1 child who is 17 years old or younger?</inlineHelpText>
    <label>Child Caregiver?</label>
    <type>Checkbox</type>
</CustomField>