force-app/main/default/objects/Survey__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Created By: AF
Business Unit: Executive Reporting
Purpose: Displays address information
Populated: Auto via survey / manual</description>
    <encryptionScheme>None</encryptionScheme>
    <label>City</label>
    <length>36</length>
    <type>Text</type>
</CustomField>