force-app/main/default/objects/Survey__c/fields/Class_Attendance_Type__c.field-meta.xml
<CustomField>
    <fullName>Class_Attendance_Type__c</fullName>
    <formula>TEXT(Registration__r.Class__r.Attendance_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Class Attendance Type</label>
    <type>Text</type>
</CustomField>