force-app/main/default/objects/Survey__c/fields/Class_Completed__c.field-meta.xml
<CustomField>
    <fullName>Class_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created By: TL
Business Unit: WFT
Purpose: For Form Assembly</description>
    <inlineHelpText>Did you complete the class?</inlineHelpText>
    <label>Class Completed</label>
    <type>Checkbox</type>
</CustomField>