force-app/main/default/objects/Survey__c/fields/Class_Display_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Display_Name__c</fullName>
    <description>Created by JW
Pulls down the Display Name of the Class that this Survey looks up to.</description>
    <formula>Registration__r.Class__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Class Display Name</label>
    <type>Text</type>
</CustomField>