force-app/main/default/objects/Survey__c/fields/Class_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Class_End_Date__c</fullName>
    <formula>Registration__r.Class_End_Date__c</formula>
    <label>Class End Date</label>
    <type>Date</type>
</CustomField>