force-app/main/default/objects/Survey__c/fields/Class_Enrolled__c.field-meta.xml
<CustomField>
    <fullName>Class_Enrolled__c</fullName>
    <description>Created by: MA
Business unit: WFT
Purpose: captures in what class is the individual enrolled in</description>
    <inlineHelpText>In which Bitwise class are you currently enrolled?</inlineHelpText>
    <label>Class Enrolled</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Websites for Beginners</fullName>
            </value>
            <value>
                <fullName>Websites for Beginners II</fullName>
            </value>
            <value>
                <fullName>Mobile Friendly Websites</fullName>
            </value>
            <value>
                <fullName>Javascript for Beginners</fullName>
            </value>
            <value>
                <fullName>React</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Specialized Course (Wordpress)</fullName>
            </value>
            <value>
                <fullName>Specialized Course (Salesforce Administration)</fullName>
            </value>
            <value>
                <fullName>Specialized Course (Quality Assurance)</fullName>
            </value>
            <value>
                <fullName>Intro to Backend</fullName>
            </value>
            <value>
                <fullName>Partnership Course (Bakersfield College)</fullName>
            </value>
            <value>
                <fullName>Partnership Course (TGR)</fullName>
            </value>
            <value>
                <fullName>Partnership Course (SMASH)</fullName>
            </value>
            <value>
                <fullName>Specialized Course (Intro to Web Development)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>