force-app/main/default/objects/Survey__c/fields/Class_Instruction_Time__c.field-meta.xml
<CustomField>
    <fullName>Class_Instruction_Time__c</fullName>
    <description>Created by JW
Pulls down the Instruction Time from the parent Class record.</description>
    <formula>TEXT(Registration__r.Class__r.Instruction_Time__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Class Instruction Time</label>
    <type>Text</type>
</CustomField>