force-app/main/default/objects/Survey__c/fields/Class_Market__c.field-meta.xml
<CustomField>
    <fullName>Class_Market__c</fullName>
    <formula>TEXT(Registration__r.Class__r.Market__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Class Market</label>
    <type>Text</type>
</CustomField>