force-app/main/default/objects/Survey__c/fields/Class_Scheduled_Time__c.field-meta.xml
<CustomField>
    <fullName>Class_Scheduled_Time__c</fullName>
    <description>GS
WFT
Class Scheduled Time</description>
    <formula>TEXT(Registration__r.Class__r.Scheduled_Time__c)</formula>
    <label>Class Scheduled Time</label>
    <type>Text</type>
</CustomField>