force-app/main/default/objects/Survey__c/fields/Class_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Class_Start_Date__c</fullName>
    <formula>Registration__r.Class__r.Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Class Start Date</label>
    <type>Date</type>
</CustomField>