force-app/main/default/objects/Survey__c/fields/Class_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Class_Time_Zone__c</fullName>
    <description>Created by JW
Pulls down the Time Zone from the associated Class record.</description>
    <formula>TEXT(Registration__r.Class__r.Time_Zone__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Class Time Zone</label>
    <type>Text</type>
</CustomField>