force-app/main/default/objects/Survey__c/fields/Class_Zoom_Link__c.field-meta.xml
<CustomField>
    <fullName>Class_Zoom_Link__c</fullName>
    <description>Created By: CC
Department: WFT
Purpose: Get Zoom Link from Classes for Survey Emails</description>
    <formula>Registration__r.Class__r.Zoom_Link__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Class Zoom Link</label>
    <type>Text</type>
</CustomField>