force-app/main/default/objects/Survey__c/fields/Classes_Pursue_Reason__c.field-meta.xml
<CustomField>
    <fullName>Classes_Pursue_Reason__c</fullName>
    <description>Created by :VC
Purpose: Track reason for choosing a reason to purse a Bitwise/Geekwise class</description>
    <inlineHelpText>What was your tops reason for choosing Geekwise/Bitwise Industries courses?</inlineHelpText>
    <label>Classes Pursue Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Convenience</fullName>
            </value>
            <value>
                <fullName>Low cost courses</fullName>
            </value>
            <value>
                <fullName>Support available to students/apprentices</fullName>
            </value>
            <value>
                <fullName>People and atmosphere</fullName>
            </value>
            <value>
                <fullName>Opportunities available to students/apprentices</fullName>
            </value>
            <value>
                <fullName>Opportunity to earn more</fullName>
            </value>
            <value>
                <fullName>Beautiful buildings</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>