force-app/main/default/objects/Survey__c/fields/Coding_Experience__c.field-meta.xml
<CustomField>
    <fullName>Coding_Experience__c</fullName>
    <description>Created by: JA
Purpose: Capture if an individual has previous coding experience, which learning resources they used, and the outcome</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Do they have previous coding experience, the learning resources they used, and the outcome?</inlineHelpText>
    <label>Coding Experience</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>