force-app/main/default/objects/Survey__c/fields/Completed_An_Apprenticeship_Program__c.field-meta.xml
<CustomField>
    <fullName>Completed_An_Apprenticeship_Program__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Created By: RS
Purpose: Field for Baseline Student Survey</description>
    <inlineHelpText>If the student has successfully completed an apprenticeship program.</inlineHelpText>
    <label>Completed An Apprenticeship Program?</label>
    <type>Checkbox</type>
</CustomField>