force-app/main/default/objects/Survey__c/fields/Course_Reason__c.field-meta.xml
<CustomField>
    <fullName>Course_Reason__c</fullName>
    <description>Created by: JA
Purpose: Capture an individual&apos;s reason for enrolling in a Bitwise course to better design classes and support services.</description>
    <inlineHelpText>Why did they enroll in a Bitwise course?</inlineHelpText>
    <label>Course Reason</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Career Advancement</fullName>
            </value>
            <value>
                <fullName>Career Change</fullName>
            </value>
            <value>
                <fullName>Workforce Re-entry</fullName>
            </value>
            <value>
                <fullName>Entrepreneurship</fullName>
            </value>
            <value>
                <fullName>Increase Earning Potential</fullName>
            </value>
            <value>
                <fullName>Have An Idea For A Tech Product Or Service</fullName>
            </value>
            <value>
                <fullName>Need A Community Of Support</fullName>
            </value>
            <value>
                <fullName>Tried Getting Technical Education Elsewhere But Haven&apos;t Found A Program That Works</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>