force-app/main/default/objects/Survey__c/fields/Course_Reason_Explanation__c.field-meta.xml
<CustomField>
    <fullName>Course_Reason_Explanation__c</fullName>
    <description>GS
Business Unit: WFT
Purpose: Reason why student enrolled in Bitwise Classes if they put &quot;Other&quot;</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>&quot;Other&quot; Reason</inlineHelpText>
    <label>Course Reason Explanation</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>