force-app/main/default/objects/Survey__c/fields/Current_Living_Situation__c.field-meta.xml
<CustomField>
    <fullName>Current_Living_Situation__c</fullName>
    <description>GS
Purpose: Baseline Survey</description>
    <inlineHelpText>Which best describes your current living situation?</inlineHelpText>
    <label>Current Living Situation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Own home</fullName>
            </value>
            <value>
                <fullName>Live with parents/or family members</fullName>
            </value>
            <value>
                <fullName>Live in household with other people who are not relative (e.g. roommates)</fullName>
            </value>
            <value>
                <fullName>Rent a home / apartment</fullName>
            </value>
            <value>
                <fullName>Temporarily staying in a shelter or homeless</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>