force-app/main/default/objects/Survey__c/fields/Current_Market__c.field-meta.xml
<CustomField>
    <fullName>Current_Market__c</fullName>
    <description>Created By: AF
Business Unit: Executive Reporting
Purpose: Displays survey data
Populated: Auto via survey / manual</description>
    <label>Current Market</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fresno</fullName>
            </value>
            <value>
                <fullName>Bakersfield</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>