force-app/main/default/objects/Survey__c/fields/Current_Title__c.field-meta.xml
<CustomField>
    <fullName>Current_Title__c</fullName>
    <description>Created by: VC
Purpose: Track current title of current position.</description>
    <inlineHelpText>Which of the following best describes your current position?</inlineHelpText>
    <label>Current Title</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entry level</fullName>
            </value>
            <value>
                <fullName>Mid‐level</fullName>
            </value>
            <value>
                <fullName>Senior level</fullName>
            </value>
            <value>
                <fullName>Executive level (except chief executive)</fullName>
            </value>
            <value>
                <fullName>Chief executive (CEO, COO, CFO, GM or principal in a business or other organization)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>